--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "sass": "^1.69.5"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
     "browser-sync": "^2.29.3",
     "gulp-rename": "^2.0.0"
   }
