switched project from functional programming to OOP + routing added

--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,11 @@
     "require": {
         "vlucas/phpdotenv": "^5.5",
         "phpmailer/phpmailer": "^6.9"
+    },
+    "autoload": {
+        "psr-4": {
+"Framework\\": "src/Framework",
+"App\\": "src/App"
+        }
     }
 }
